--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "database",
+  "name": "@chihweiliu1993/sql-server-test-database-tools",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./build && tsc",
