change build folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "./build",
     "types": ["node"],
     /* Basic Options */
     // "incremental": true,                   /* Enable incremental compilation */
